# SWE_KPI

./: .dockerignore  .gitignore  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 44ad433cb3a8_description_of_changes.py  50f1fe3ff4cb_initial_migration.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  students.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/crud/: base.py  student.py  user.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  course.py  department.py  event.py  feedback.py  internship.py  kpi.py  lecturer.py  student.py  user.py
app/schemas/: __init__.py  auth.py  common.py  course.py  kpi.py  student.py
app/services/calculators/: __init__.py  base_calculator.py
app/services/collectors/: __init__.py  base_collector.py
app/tasks/: celery_app.py
app/utils/: formatters.py  validators.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: API_QUICK_START.md
scripts/: create_admin.py  init_db.py  seed_data.py  wait-for-postgres.sh
tests/: __init__.py  conftest.py
tests/unit/: test_security.py  test_validators.py
